--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,5 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: parkly
       MYSQL_USER: root
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_PASSWORD:
