--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,9 +18,9 @@ jobs:
           - 3306:3306
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: root
-          MYSQL_PASSWORD: root
+          MYSQL_DATABASE: parkly
+          # MYSQL_USER: root
+          # MYSQL_PASSWORD: root
         options: >-
           --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
