--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,7 +48,16 @@ jobs:
         run: php artisan key:generate
 
       - name: Run database migrations
-        run: php artisan migrate --force
+        run: php artisan migrate:fresh
+
+      - name: remove php unit
+        run: composer remove phpunit/phpunit
+
+      - name: install pest
+        run: composer require pestphp/pest --dev --with-all-dependencies
+
+      - name: install pest plugin
+        run: composer require pestphp/pest-plugin-laravel --dev
         
       - name: Run tests with Pest
-        run: vendor/bin/pest
+        run: php artisan test
