--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,8 +19,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: parkly
-          # MYSQL_USER: root
-          # MYSQL_PASSWORD: root
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
         options: >-
           --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
