--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,8 +50,8 @@ jobs:
       - name: Run database migrations
         run: php artisan migrate:fresh
 
-      - name: remove php unit
-        run: composer remove phpunit/phpunit
+      # - name: remove php unit
+      #   run: composer remove phpunit/phpunit
 
       - name: install pest
         run: composer require pestphp/pest --dev --with-all-dependencies
