--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: parkly
-          MYSQL_USER: root
+          # MYSQL_USER: root
           MYSQL_PASSWORD: root
         options: >-
           --health-cmd="mysqladmin ping --silent"
